--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -7,6 +7,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/list"/>
+            android:id="@+id/list">
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </LinearLayout>
 
 </ScrollView>
